# conductor-on-aca-jobs

./: .gitignore  LICENSE  README.md  azure.yaml  c123.db  c123.db-shm  c123.db-wal  pyproject.toml
.github/workflows/: ci.yml
infra/: main.bicep  main.parameters.json
infra/scripts/: defaults.ps1  defaults.sh
scripts/: generate_fanout.py  local_smoke.py
src/conductor_aca_jobs/: __init__.py  client.py  workers.py
tests/: test_contract.py
workflows/: fanout.json  single.json
