[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "conductor-aca-jobs"
version = "0.1.0"
description = "Run Azure Container Apps Jobs from existing Conductor OSS"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.15"
dependencies = ["azure-identity>=1.19,<2", "conductor-python==1.5.1", "httpx>=0.28,<1"]

[project.optional-dependencies]
dev = ["build>=1.2,<2", "mypy>=1.15,<2", "pytest>=8,<9", "pytest-asyncio>=0.24,<2", "ruff>=0.11,<1"]

[tool.hatch.build.targets.wheel]
packages = ["src/conductor_aca_jobs"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"